--- a/Dashboard.html
+++ b/Dashboard.html
@@ -29,7 +29,7 @@
 
 	<div class="container">
 		<div id="section1" class="closeDp">
-			<div id="img-div"><img src="logo.jpg"></div>
+			<div id="img-div"><img src="logo.JPG"></div>
 			<div id="menu-button">
 				<a href="" class="link-disappear">HOME</a>
 				<a href="" class="link1 link-disappear">ABOUT</a>
@@ -162,28 +162,28 @@
 	<!-- Add button link at buttons -->
 	<div id="section7" class="closeDp">
 		<div class="box-div">
-			<div class="img-div"><img src="picture1.jpg"></div>
+			<div class="img-div"><img src="picture1.JPG"></div>
 			<p class="p1">$0.00</p>
 			<p class="p2">LAST DEPOSIT</p>
 			<button>CREATE INVESTMENT</button>
 		</div>
 
 		<div class="box-div">
-			<div class="img-div"><img src="picture2.jpg"></div>
+			<div class="img-div"><img src="picture2.JPG"></div>
 			<p class="p1">$0.00</p>
 			<p class="p2">LAST WITHDRAWAL</p>
 			<button>REINVEST EARNINGS</button>
 		</div>
 
 		<div class="box-div">
-			<div class="img-div"><img src="picture3.jpg"></div>
+			<div class="img-div"><img src="picture3.JPG"></div>
 			<p class="p1">$0.00</p>
 			<p class="p2">TOTAL WITHDREW</p>
 			<button>REQUEST WITHDRAWAL</button>
 		</div>
 
 		<div class="box-div">
-			<div class="img-div"><img src="picture4.jpg"></div>
+			<div class="img-div"><img src="picture4.JPG"></div>
 			<p class="p1">$0.00</p>
 			<p class="p2">TOTAL DEPOSIT</p>
 			<button>TRANSCATION HISTORY</button>
@@ -193,17 +193,19 @@
 
 
 	<div id="section8" class="closeDp container">
-		<div class="img-div"><img src="binance.jpg"></div>
-		<div class="img-div"><img src="coinbase.jpg"></div>
-		<div class="img-div"><img src="trustwallet.jpg"></div>
-		<div class="img-div"><img src="meta mask.png"></div>
-		<div class="img-div"><img src="blockchain dd.jpg"></div>
+		<div class="section8-innner-div">
+			<div class="img-div"><img src="binance.jpg"></div>
+			<div class="img-div"><img src="coinbase.jpg"></div>
+			<div class="img-div"><img src="trustwallet.jpg"></div>
+			<div class="img-div"><img src="meta mask.png"></div>
+			<div class="img-div"><img src="blockchain dd.jpg"></div>
+		</div>
 	</div>
 
 
 	<div id="section9" class="closeDp">
 		<div class="box-div">
-			<div id="img-div"><img src="logo.jpg"></div>
+			<div id="img-div"><img src="logo.JPG"></div>
 			<div id="small-div"><small>&copy cryptominingville.com All Right Reserved</small></div>
 		</div>
 
